# cryptoprices_bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  bot.py  config.py  cryptoprices_bot.py  decorators.py  jobs.py  models.py  pyproject.toml  state.py  utils.py
handlers/: admin.py  alerts.py  base.py
src/: bot.py  config.py  decorators.py  jobs.py  models.py  state.py  utils.py
src/handlers/: admin.py  alerts.py  base.py
tests/: test_alerts.py
